Fix comparação de cpf Remove formatação do cpf nos testes